GNOME Bugzilla – Bug 693842
Fix gda_meta_context_new() prototype
Last modified: 2013-02-16 13:34:36 UTC
See attached patch.
Created attachment 236166 [details] [review] Fix gda_meta_context_new() prototype Also fix gda_meta_context_copy() to actually set the table name of the copy.
Patch applied! Thanks