Fix gda_meta_context_new() prototype

Also fix gda_meta_context_copy() to actually set the table name of the copy.

https://bugzilla.gnome.org/show_bug.cgi?id=693842