libgda/gda-meta-store.h
@@ -208,7 +208,7 @@ gboolean          gda_meta_store_undeclare_foreign_key    (GdaMetaStore *store, 
 							   GError **error);
 
 GType             gda_meta_context_get_type               (void) G_GNUC_CONST;
-GdaMetaContext*   gda_meta_context_new                    ();
+GdaMetaContext*   gda_meta_context_new                    (void);
 void              gda_meta_context_set_table              (GdaMetaContext *ctx, const gchar *table);
 const gchar*      gda_meta_context_get_table              (GdaMetaContext *ctx);
 void              gda_meta_context_set_column             (GdaMetaContext *ctx, const gchar* column, 
